crates/math-core/tests/snapshots/error_test__unknown_color.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{\\color{foobar} x}"
---
Error: Unknown color "foobar".
   ╭─[ <input>:1:8 ]
   │
 1 │ {\color{foobar} x}
   │        ────┬───  
   │            ╰───── unknown color
───╯
